    package, and install them under /usr/share/oem-config/glade and
    /usr/share/oem-config/qt respectively.
  * Rename gtk-ui to gtk_ui and kde-ui to kde_ui, to make it easier to
    subclass them.
  * Break up the glade file into multiple pieces to make updates to single
    pages a lot easier (port of work done in ubiquity by Mario Limonciello).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 02 Jul 2007 12:45:26 +0100

oem-config (1.16) gutsy; urgency=low

  * Update console-setup component for Lithuanian changes in console-setup
    1.16ubuntu1.
  * Fix desktop file installation.
  * Automatic update of included source packages: console-setup 1.16ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 02 Jul 2007 08:54:44 +0100

oem-config (1.15) gutsy; urgency=low

  * Add an oem-config-check udeb to set an "OEM mode (for manufacturers
    only)" info message. OEM mode should now be enabled using
    oem-config/enable=true.
  * Multiply menu-item-numbers by 100.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 18 May 2007 17:55:43 +0100

oem-config (1.14) gutsy; urgency=low

  * Add an apport hook to attach /var/log/oem-config.log.
  * Strip binaries.
  * Print usage message and exit if any non-option arguments are supplied to
    oem-config; suggest oem-config-prepare (LP: #105940).
  * Update Japanese keyboard layout handling to match console-setup
    1.7ubuntu18, which uses jp(latin),jp by default (LP: #63915).
  * Teach oem-config-prepare to escalate privileges itself using gksudo,
    kdesu, etc. as appropriate, rather than requiring it to be invoked using
    sudo.
  * Add a desktop icon to the oem user's desktop to run oem-config-prepare
    (LP: #41698).
  * Display an error dialog and exit if running as non-root (LP: #99211).
  * Automatic update of included source packages: console-setup 1.15ubuntu1,
    localechooser 1.38ubuntu1, tzsetup 1:0.17, user-setup 1.14ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 17 May 2007 11:43:03 +0100
