@@ -56,7 +56,9 @@ if __name__ == '__main__':
                       help="Use the given frontend (gtk_ui).")
     parser.add_option('-d', '--debug', dest='debug', action='store_true',
                       help='debug mode (warning: passwords will be logged!)')
-    parser.set_defaults(frontend=None)
+    parser.add_option('--pdb', dest='debug_pdb', action='store_true',
+                      help='drop into Python debugger on a crash')
+    parser.set_defaults(frontend=None, debug_pdb=False)
     (options, args) = parser.parse_args()
 
     if args:
@@ -65,6 +67,9 @@ if __name__ == '__main__':
 
     if options.debug:
         os.environ['OEM_CONFIG_DEBUG'] = '1'
+
+    if options.debug_pdb:
+        os.environ['OEM_CONFIG_DEBUG_PDB'] = '1'
 
     if 'OEM_CONFIG_DEBUG' in os.environ:
         if 'DEBCONF_DEBUG' not in os.environ:
