@@ -7,6 +7,8 @@ oem-config (1.17) UNRELEASED; urgency=low
     subclass them.
   * Break up the glade file into multiple pieces to make updates to single
     pages a lot easier (port of work done in ubiquity by Mario Limonciello).
+  * Drop into pdb.post_mortem on non-SyntaxError exceptions if the --pdb
+    option is given and oem-config is running from a terminal.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 02 Jul 2007 12:45:26 +0100
 
